--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.2",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
